# LabRobotsMovilesAutonomos

./: .gitignore  ARQUITECTURA_DETALLADA.md  DIAGRAMAS_ASCII.txt  FLUJO_PARTICLE_FILTER.md  OPTIMIZATIONS_IMPLEMENTED.md  PARTICLE_FILTER_ANALYSIS.md  PARTICLE_FILTER_FLOWCHARTS.txt  README_OPTIMIZACIONES_L.md  RESUMEN_PARTICLE_FILTER.md  TODAS_LAS_OPTIMIZACIONES.md  index.html  particle_filter_temp.py  possible_improvements.txt
sim_ws/: MEJORAS.md  coppeliasim.prof  cplus.md
sim_ws/.devcontainer/: requirements.txt
sim_ws/codingstudy/: copelianode.py
sim_ws/robot_ssh_scripts_test/amr_msgs/: CMakeLists.txt
sim_ws/robot_ssh_scripts_test/amr_teleoperation/: package.xml  setup.py
sim_ws/robot_ssh_scripts_test/amr_teleoperation/amr_teleoperation/: keyboard_node.py  teleoperation_node.py
sim_ws/src/amr_bringup/: setup.py
sim_ws/src/amr_bringup/config/: ekf.yaml
sim_ws/src/amr_bringup/launch/: lab03.launch.py  lab04.launch.py  project.launch.py  project_l.launch.py
sim_ws/src/amr_control/: CMakeLists.txt  package.xml
sim_ws/src/amr_control/amr_control/: estudio.py  pure_pursuit.py  pure_pursuit_node.py  wall_follower.py  wall_follower_node.py
sim_ws/src/amr_control/src/: control_cpp.cpp
sim_ws/src/amr_localization/: CMakeLists.txt  package.xml  setup.py
sim_ws/src/amr_localization/amr_localization/: maps.py  particle_filter.py  particle_filter_l.py  particle_filter_node.py  particle_filter_node_l.py
sim_ws/src/amr_localization/src/: maps_cpp.cpp  particle_filter_cpp.cpp
sim_ws/src/amr_msgs/: CMakeLists.txt
sim_ws/src/amr_msgs/msg/: ControlLocalization.msg  ControlStopping.msg
sim_ws/src/amr_planning/: setup.py
sim_ws/src/amr_planning/amr_planning/: maps.py  prm.py  prm_node.py
sim_ws/src/amr_simulation/amr_simulation/: coppeliasim_node.py  robot_turtlebot3_burger.py
sim_ws/src/amr_simulation/worlds/: lab02.ttt  lab03.ttt
sim_ws/src/more_interfaces/: CMakeLists.txt  package.xml
sim_ws/src/teleop_nodes/: setup.py
sim_ws/src/teleop_nodes/teleop_nodes/: key_to_velocity_node.py  websocket_key_node.py
sim_ws/src/tutorial_pubsub_py/: package.xml  setup.cfg  setup.py
sim_ws/src/tutorial_pubsub_py/tutorial_pubsub_py/: publisher_member_function.py  subscriber_member_function.py
sim_ws/teleop_nodes/: package.xml  setup.cfg
sim_ws/teleop_nodes/teleop_nodes/: key_to_velocity_node.py
tb3_ws/amr_bringup/launch/: lab02.launch.py  lab03.launch.py  lab04.launch.py  project.launch.py
tb3_ws/amr_control/: CMakeLists.txt  package.xml
tb3_ws/amr_control/amr_control/: pure_pursuit.py  pure_pursuit_node.py  wall_follower.py  wall_follower_node.py
tb3_ws/amr_control/src/: control_cpp.cpp
tb3_ws/amr_localization/amr_localization/: maps.py  particle_filter.py  particle_filter_node.py
tb3_ws/amr_msgs/: CMakeLists.txt
tb3_ws/amr_msgs/msg/: KeyPressed.msg
tb3_ws/amr_teleoperation/: setup.py
tb3_ws/amr_teleoperation/amr_teleoperation/: keyboard_node.py  teleoperation_node.py
tb3_ws/amr_turtlebot3/: setup.py
tb3_ws/amr_turtlebot3/amr_turtlebot3/: odometry_node.py
tb3_ws/src/amr_bringup/launch/: lab02.launch.py  project.launch.py
tb3_ws/src/amr_control/amr_control/: pure_pursuit.py  pure_pursuit_node.py  wall_follower.py  wall_follower_node.py
tb3_ws/src/amr_control/src/: control_cpp.cpp
tb3_ws/src/amr_localization/: package.xml  setup.py
tb3_ws/src/amr_localization/amr_localization/: particle_filter.py  particle_filter_node.py
tb3_ws/src/amr_planning/amr_planning/: prm.py  prm_node.py
tb3_ws/src/amr_teleoperation/amr_teleoperation/: teleoperation_node.py
tb3_ws/src/amr_turtlebot3/: setup.py
tb3_ws/src/more_interfaces/msg/: KeyTouched.msg
tb3_ws/tb3_ws/amr_msgs/: package.xml
tb3_ws/tb3_ws/amr_teleoperation/amr_teleoperation/: keyboard_node.py  teleoperation_node.py
